@@ -1,10 +1,18 @@
 package at.ac.fhcampuswien.fhmdb;
 
 import at.ac.fhcampuswien.fhmdb.api.MovieAPI;
+import at.ac.fhcampuswien.fhmdb.entities.MovieEntity;
+import at.ac.fhcampuswien.fhmdb.entities.WatchlistMovieEntity;
+import at.ac.fhcampuswien.fhmdb.exceptions.DatabaseException;
+import at.ac.fhcampuswien.fhmdb.exceptions.MovieApiException;
 import at.ac.fhcampuswien.fhmdb.models.Genre;
+import at.ac.fhcampuswien.fhmdb.db.DatabaseManager;
 import at.ac.fhcampuswien.fhmdb.models.Movie;
 import at.ac.fhcampuswien.fhmdb.models.SortedState;
+import at.ac.fhcampuswien.fhmdb.repositories.MovieRepository;
+import at.ac.fhcampuswien.fhmdb.repositories.WatchlistRepository;
 import at.ac.fhcampuswien.fhmdb.ui.MovieCell;
+import com.j256.ormlite.dao.Dao;
 import com.jfoenix.controls.JFXButton;
 import com.jfoenix.controls.JFXComboBox;
 import com.jfoenix.controls.JFXListView;
@@ -13,153 +21,180 @@ import javafx.collections.ObservableList;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
+import javafx.scene.control.Alert;
 import javafx.scene.control.TextField;
 
 import java.net.URL;
-import java.util.*;
-import java.util.function.Function;
+import java.util.List;
+import java.util.ResourceBundle;
 import java.util.stream.Collectors;
 
 public class HomeController implements Initializable {
-    @FXML
-    public JFXButton searchBtn;
+    @FXML private JFXButton searchBtn;
+    @FXML private JFXButton homeBtn;
+    @FXML private JFXButton watchlistNavBtn;
+    @FXML private JFXButton sortBtn;
+    @FXML private TextField searchField;
+    @FXML private JFXListView<Movie> movieListView;
+    @FXML private JFXComboBox<String> genreComboBox;
+    @FXML private JFXComboBox<String> releaseYearComboBox;
+    @FXML private JFXComboBox<String> ratingFromComboBox;
 
-    @FXML
-    public TextField searchField;
+    private List<Movie> allMovies;
+    private final ObservableList<Movie> observableMovies = FXCollections.observableArrayList();
+    private SortedState sortedState;
 
-    @FXML
-    public JFXListView movieListView;
+    private final MovieRepository movieRepo;
+    private final WatchlistRepository watchRepo;
 
-    @FXML
-    public JFXComboBox genreComboBox;
+    public HomeController() {
+        try {
+            DatabaseManager dbm = new DatabaseManager(
+                    "jdbc:h2:~/fhmdb;AUTO_SERVER=TRUE",
+                    "sa",
+                    ""
+            );
+            dbm.createConnectionSource();
+            dbm.createTables();
 
-    @FXML
-    public JFXComboBox releaseYearComboBox;
+            Dao<MovieEntity, Long> mDao = DatabaseManager.getMovieDao();
+            Dao<WatchlistMovieEntity, Long> wDao = DatabaseManager.getWatchlistDao();
 
-    @FXML
-    public JFXComboBox ratingFromComboBox;
+            this.movieRepo = new MovieRepository(mDao);
+            this.watchRepo = new WatchlistRepository(wDao);
 
-    @FXML
-    public JFXButton sortBtn;
+        } catch (Exception e) {
+            throw new RuntimeException("DB-Initialization failed", e);
+        }
+    }
 
-    public List<Movie> allMovies;
-
-    protected ObservableList<Movie> observableMovies = FXCollections.observableArrayList();
-
-    protected SortedState sortedState;
 
     @Override
-    public void initialize(URL url, ResourceBundle resourceBundle) {
+    public void initialize(URL url, ResourceBundle rb) {
         initializeState();
         initializeLayout();
     }
 
-    public void initializeState() {
-        List<Movie> result = MovieAPI.getAllMovies();
-        setMovies(result);
-        setMovieList(result);
+    private void initializeState() {
+        try {
+            // Filme von der API holen und im Cache speichern
+            List<Movie> movies = MovieAPI.getAllMovies();
+            movieRepo.removeAll();
+            movieRepo.addAllMovies(movies);
+            setMovies(movies);
+            setMovieList(movies);
+
+        } catch (MovieApiException apiEx) {
+            showErrorDialog("API-Fehler beim Laden der Filme", apiEx.getMessage());
+            try {
+                List<MovieEntity> entities = movieRepo.getAllMovies();
+                List<Movie> cached = MovieEntity.toMovies(entities);
+                setMovies(cached);
+                setMovieList(cached);
+            } catch (DatabaseException dbEx) {
+                showErrorDialog("DB-Fehler beim Lesen des Caches", dbEx.getMessage());
+            }
+        } catch (DatabaseException dbEx) {
+            showErrorDialog("DB-Fehler beim Cachen der Filme", dbEx.getMessage());
+        }
+
         sortedState = SortedState.NONE;
-
-        // test stream methods
-        System.out.println("getMostPopularActor");
-        System.out.println(getMostPopularActor(allMovies));
-
-        System.out.println("getLongestMovieTitle");
-        System.out.println(getLongestMovieTitle(allMovies));
-
-        System.out.println("count movies from Zemeckis");
-        System.out.println(countMoviesFrom(allMovies, "Robert Zemeckis"));
-
-        System.out.println("count movies from Steven Spielberg");
-        System.out.println(countMoviesFrom(allMovies, "Steven Spielberg"));
-
-        System.out.println("getMoviewsBetweenYears");
-        List<Movie> between = getMoviesBetweenYears(allMovies, 1994, 2000);
-        System.out.println(between.size());
-        System.out.println(between.stream().map(Objects::toString).collect(Collectors.joining(", ")));
     }
 
-    public void initializeLayout() {
-        movieListView.setItems(observableMovies);   // set the items of the listview to the observable list
-        movieListView.setCellFactory(movieListView -> new MovieCell()); // apply custom cells to the listview
+    private void initializeLayout() {
+        movieListView.setItems(observableMovies);
 
-        // genre combobox
-        Object[] genres = Genre.values();   // get all genres
-        genreComboBox.getItems().add("No filter");  // add "no filter" to the combobox
-        genreComboBox.getItems().addAll(genres);    // add all genres to the combobox
+        genreComboBox.getItems().add("No filter");
+        for (Genre g : Genre.values()) genreComboBox.getItems().add(g.name());
         genreComboBox.setPromptText("Filter by Genre");
 
-        // year combobox
-        releaseYearComboBox.getItems().add("No filter");  // add "no filter" to the combobox
-        // fill array with numbers from 1900 to 2023
-        Integer[] years = new Integer[124];
-        for (int i = 0; i < years.length; i++) {
-            years[i] = 1900 + i;
-        }
-        releaseYearComboBox.getItems().addAll(years);    // add all years to the combobox
+        releaseYearComboBox.getItems().add("No filter");
+        for (int y = 1900; y <= 2023; y++) releaseYearComboBox.getItems().add(String.valueOf(y));
         releaseYearComboBox.setPromptText("Filter by Release Year");
 
-        // rating combobox
-        ratingFromComboBox.getItems().add("No filter");  // add "no filter" to the combobox
-        // fill array with numbers from 0 to 10
-        Integer[] ratings = new Integer[11];
-        for (int i = 0; i < ratings.length; i++) {
-            ratings[i] = i;
-        }
-        ratingFromComboBox.getItems().addAll(ratings);    // add all ratings to the combobox
+        ratingFromComboBox.getItems().add("No filter");
+        for (int r = 0; r <= 10; r++) ratingFromComboBox.getItems().add(String.valueOf(r));
         ratingFromComboBox.setPromptText("Filter by Rating");
+
+        movieListView.setCellFactory(lv -> new MovieCell(
+                m -> {
+                    try { watchRepo.addToWatchlist(new WatchlistMovieEntity(m.getId())); }
+                    catch (DatabaseException e) { showErrorDialog("Watchlist-Hinzufügen", e.getMessage()); }
+                },
+                m -> {
+                    try { watchRepo.removeFromWatchlist(m.getId()); }
+                    catch (DatabaseException e) { showErrorDialog("Watchlist-Entfernen", e.getMessage()); }
+                }
+        ));
     }
 
-    public void setMovies(List<Movie> movies) {
-        allMovies = movies;
+    @FXML
+    private void showAllMovies(ActionEvent ev) {
+        setMovieList(allMovies);
+        searchField.clear();
+        genreComboBox.getSelectionModel().clearSelection();
+        releaseYearComboBox.getSelectionModel().clearSelection();
+        ratingFromComboBox.getSelectionModel().clearSelection();
+        sortedState = SortedState.NONE;
+        homeBtn.setDisable(true);
+        watchlistNavBtn.setDisable(false);
     }
 
-    public void setMovieList(List<Movie> movies) {
-        observableMovies.clear();
-        observableMovies.addAll(movies);
+    @FXML
+    private void showWatchlist(ActionEvent ev) {
+        List<MovieEntity> entities = watchRepo.getWatchlist().stream()
+                .map(WatchlistMovieEntity::getApiId)
+                .map(movieRepo::getMovie)
+                .collect(Collectors.toList());
+        List<Movie> watchlist = MovieEntity.toMovies(entities);
+        setMovieList(watchlist);
+        sortedState = SortedState.NONE;
+        homeBtn.setDisable(false);
+        watchlistNavBtn.setDisable(true);
     }
 
-    public void sortMovies(){
+    private void showErrorDialog(String title, String msg) {
+        Alert a = new Alert(Alert.AlertType.ERROR);
+        a.setTitle(title);
+        a.setHeaderText(null);
+        a.setContentText(msg);
+        a.showAndWait();
+    }
+
+    @FXML
+    private void sortBtnClicked(ActionEvent ev) {
         if (sortedState == SortedState.NONE || sortedState == SortedState.DESCENDING) {
             sortMovies(SortedState.ASCENDING);
-        } else if (sortedState == SortedState.ASCENDING) {
+        } else {
             sortMovies(SortedState.DESCENDING);
         }
     }
-    // sort movies based on sortedState
-    // by default sorted state is NONE
-    // afterwards it switches between ascending and descending
-    public void sortMovies(SortedState sortDirection) {
-        if (sortDirection == SortedState.ASCENDING) {
-            observableMovies.sort(Comparator.comparing(Movie::getTitle));
-            sortedState = SortedState.ASCENDING;
+
+    private void sortMovies(SortedState dir) {
+        if (dir == SortedState.ASCENDING) {
+            observableMovies.sort((a,b) -> a.getTitle().compareToIgnoreCase(b.getTitle()));
         } else {
-            observableMovies.sort(Comparator.comparing(Movie::getTitle).reversed());
-            sortedState = SortedState.DESCENDING;
+            observableMovies.sort((a,b) -> b.getTitle().compareToIgnoreCase(a.getTitle()));
         }
+        sortedState = dir;
     }
 
-    public List<Movie> filterByQuery(List<Movie> movies, String query){
-        if(query == null || query.isEmpty()) return movies;
 
-        if(movies == null) {
-            throw new IllegalArgumentException("movies must not be null");
-        }
-
-        return movies.stream().filter(movie ->
-                movie.getTitle().toLowerCase().contains(query.toLowerCase()) ||
-                movie.getDescription().toLowerCase().contains(query.toLowerCase()))
+    public List<Movie> filterByQuery(List<Movie> movies, String query) {
+        if (query == null || query.isEmpty()) return movies;
+        if (movies == null) throw new IllegalArgumentException("movies must not be null");
+        return movies.stream()
+                .filter(m -> m.getTitle().toLowerCase().contains(query.toLowerCase())
+                        || m.getDescription().toLowerCase().contains(query.toLowerCase()))
                 .toList();
     }
 
-    public List<Movie> filterByGenre(List<Movie> movies, Genre genre){
-        if(genre == null) return movies;
-
-        if(movies == null) {
-            throw new IllegalArgumentException("movies must not be null");
-        }
-
-        return movies.stream().filter(movie -> movie.getGenres().contains(genre)).toList();
+    public List<Movie> filterByGenre(List<Movie> movies, Genre genre) {
+        if (genre == null) return movies;
+        if (movies == null) throw new IllegalArgumentException("movies must not be null");
+        return movies.stream()
+                .filter(m -> m.getGenres().contains(genre))
+                .toList();
     }
 
     public void applyAllFilters(String searchQuery, Object genre) {
@@ -177,70 +212,71 @@ public class HomeController implements Initializable {
         observableMovies.addAll(filteredMovies);
     }
 
-    public void searchBtnClicked(ActionEvent actionEvent) {
-        String searchQuery = searchField.getText().trim().toLowerCase();
-        String releaseYear = validateComboboxValue(releaseYearComboBox.getSelectionModel().getSelectedItem());
-        String ratingFrom = validateComboboxValue(ratingFromComboBox.getSelectionModel().getSelectedItem());
-        String genreValue = validateComboboxValue(genreComboBox.getSelectionModel().getSelectedItem());
+    @FXML private void searchBtnClicked(ActionEvent ev) {
+        String q  = searchField.getText().trim().toLowerCase();
+        String yr = validateComboboxValue(releaseYearComboBox.getValue());
+        String rt = validateComboboxValue(ratingFromComboBox.getValue());
+        String gn = validateComboboxValue(genreComboBox.getValue());
+        Genre genre = gn!=null ? Genre.valueOf(gn) : null;
 
-        Genre genre = null;
-        if(genreValue != null) {
-            genre = Genre.valueOf(genreValue);
+        try {
+            List<Movie> movies = MovieAPI.getAllMovies(q, genre, yr, rt);
+            movieRepo.removeAll();
+            movieRepo.addAllMovies(movies);
+            setMovies(movies);
+            setMovieList(movies);
+            if (sortedState != SortedState.NONE) sortMovies(sortedState);
+        } catch (MovieApiException ex) {
+            showErrorDialog("API-Fehler bei der Suche", ex.getMessage());
+        } catch (DatabaseException dbEx) {
+            showErrorDialog("DB-Fehler beim Aktualisieren des Caches", dbEx.getMessage());
         }
-
-        List<Movie> movies = getMovies(searchQuery, genre, releaseYear, ratingFrom);
-        setMovies(movies);
-        setMovieList(movies);
-        // applyAllFilters(searchQuery, genre);
-
-        sortMovies(sortedState);
     }
 
-    public String validateComboboxValue(Object value) {
-        if(value != null && !value.toString().equals("No filter")) {
-            return value.toString();
-        }
-        return null;
+
+    private String validateComboboxValue(String val) {
+        return "No filter".equals(val) ? null : val;
+    }
+
+    private void setMovies(List<Movie> movies) {
+        this.allMovies = movies;
+    }
+
+    private void setMovieList(List<Movie> movies) {
+        observableMovies.setAll(movies);
     }
 
     public List<Movie> getMovies(String searchQuery, Genre genre, String releaseYear, String ratingFrom) {
         return MovieAPI.getAllMovies(searchQuery, genre, releaseYear, ratingFrom);
     }
 
-    public void sortBtnClicked(ActionEvent actionEvent) {
-        sortMovies();
-    }
 
-    // count which actor is in the most movies
     public String getMostPopularActor(List<Movie> movies) {
-        String actor = movies.stream()
-                .flatMap(movie -> movie.getMainCast().stream())
-                .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()))
-                .entrySet()
-                .stream()
-                .max(Map.Entry.comparingByValue())
-                .map(Map.Entry::getKey)
+        return movies.stream()
+                .flatMap(m -> m.getMainCast().stream())
+                .collect(Collectors.groupingBy(a -> a, Collectors.counting()))
+                .entrySet().stream()
+                .max((e1, e2) -> e1.getValue().compareTo(e2.getValue()))
+                .map(java.util.Map.Entry::getKey)
                 .orElse("");
-
-        return actor;
     }
 
     public int getLongestMovieTitle(List<Movie> movies) {
         return movies.stream()
-                .mapToInt(movie -> movie.getTitle().length())
+                .mapToInt(m -> m.getTitle().length())
                 .max()
                 .orElse(0);
     }
 
     public long countMoviesFrom(List<Movie> movies, String director) {
         return movies.stream()
-                .filter(movie -> movie.getDirectors().contains(director))
+                .filter(m -> m.getDirectors().contains(director))
                 .count();
     }
 
     public List<Movie> getMoviesBetweenYears(List<Movie> movies, int startYear, int endYear) {
         return movies.stream()
-                .filter(movie -> movie.getReleaseYear() >= startYear && movie.getReleaseYear() <= endYear)
-                .collect(Collectors.toList());
+                .filter(m -> m.getReleaseYear() >= startYear && m.getReleaseYear() <= endYear)
+                .toList();
     }
 }
